# eventide

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: main.rs
apps/control-plane/: Cargo.toml
apps/control-plane/src/: main.rs
apps/coordinator/: Cargo.toml
apps/coordinator/src/: main.rs
apps/processor-runtime/: Cargo.toml
apps/processor-runtime/src/: main.rs
apps/query-service/: Cargo.toml
apps/query-service/src/: main.rs
apps/sink-writer/: Cargo.toml
apps/sink-writer/src/: main.rs
apps/state-manager/: Cargo.toml
apps/state-manager/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control-plane-app/: Cargo.toml
crates/control-plane-app/src/: lib.rs
crates/coordinator-app/: Cargo.toml
crates/coordinator-app/src/: lib.rs
crates/postgres-store/: Cargo.toml
crates/postgres-store/migrations/: 0001_metadata.sql  0002_auth_rbac.sql  0003_coordinator_leases.sql  0004_processor_runtime.sql  0005_stateful_processing.sql
crates/postgres-store/src/: lib.rs
crates/processor-app/: Cargo.toml
crates/processor-app/src/: lib.rs
crates/query-app/: Cargo.toml
crates/query-app/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: auth.rs  contracts.rs  coordinator.rs  lib.rs  pipeline.rs  service.rs
ops/keycloak/: README.md
ops/keycloak/realm-import/: event-pipeline-realm.json  eventide-realm.json
proto/eventide/v1/: eventide.proto
proto/eventpipeline/v1/: event_pipeline.proto
scripts/: postgres-down.sh  postgres-up.sh
