[workspace]
members = [
    "apps/api-gateway",
    "apps/control-plane",
    "apps/coordinator",
    "apps/processor-runtime",
    "apps/query-service",
    "apps/sink-writer",
    "apps/state-manager",
    "crates/config",
    "crates/runtime",
    "crates/types",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/gnix0/event-pipeline"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
