[workspace]
members = [
    "apps/api-gateway",
    "apps/control-plane",
    "apps/coordinator",
    "apps/processor-runtime",
    "apps/query-service",
    "apps/sink-writer",
    "apps/state-manager",
    "crates/config",
    "crates/auth",
    "crates/coordinator-app",
    "crates/control-plane-app",
    "crates/postgres-store",
    "crates/runtime",
    "crates/types",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/gnix0/event-pipeline"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto", "use_pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
