[package]
name = "api-gateway"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
eventide-config = { path = "../../crates/config" }
eventide-runtime = { path = "../../crates/runtime" }
eventide-types = { path = "../../crates/types" }
tokio.workspace = true
