[package]
name = "control-plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
event-pipeline-config = { path = "../../crates/config" }
event-pipeline-runtime = { path = "../../crates/runtime" }
event-pipeline-types = { path = "../../crates/types" }
tokio.workspace = true
