[package]
name = "control-plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
eventide-auth = { path = "../../crates/auth" }
eventide-config = { path = "../../crates/config" }
eventide-control-plane-app = { path = "../../crates/control-plane-app" }
eventide-postgres-store = { path = "../../crates/postgres-store" }
eventide-runtime = { path = "../../crates/runtime" }
eventide-types = { path = "../../crates/types" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
