[package]
name = "query-service"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
eventide-config = { path = "../../crates/config" }
eventide-postgres-store = { path = "../../crates/postgres-store" }
eventide-query-app = { path = "../../crates/query-app" }
eventide-runtime = { path = "../../crates/runtime" }
eventide-types = { path = "../../crates/types" }
tokio.workspace = true
tracing.workspace = true
