[package]
name = "event-pipeline-auth"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
event-pipeline-types = { path = "../types" }
jsonwebtoken.workspace = true
serde.workspace = true
