[package]
name = "event-pipeline-control-plane-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
event-pipeline-types = { path = "../types" }
tokio.workspace = true
