[package]
name = "event-pipeline-postgres-store"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
event-pipeline-control-plane-app = { path = "../control-plane-app" }
event-pipeline-types = { path = "../types" }
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
