[package]
name = "eventide-postgres-store"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
eventide-coordinator-app = { path = "../coordinator-app" }
eventide-control-plane-app = { path = "../control-plane-app" }
eventide-processor-app = { path = "../processor-app" }
eventide-query-app = { path = "../query-app" }
eventide-types = { path = "../types" }
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
