[package]
name = "eventide-processor-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
eventide-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
