[package]
name = "eventide-query-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
eventide-types = { path = "../types" }
tokio.workspace = true
