[package]
name = "eventide-runtime"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
eventide-config = { path = "../config" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
